FRONTEND: fix script.js

--- a/FRONTEND/frontPage.html
+++ b/FRONTEND/frontPage.html
@@ -72,7 +72,7 @@
   </div>
     <div class="row mb-3">
     <label class="label">Password :
-    <input id="pswd" class="controleInput" name="submittedPassword" type="password"> <!--required pattern="[0-9a-zA-Z]{10,20}"-->
+    <input id="pswd" class="controleInput" name="submittedPassword" type="password">
   </label class="label">
   </div>
     <div class="row mb-3">
